# python-snippets

./: .gitignore  README.md
algorithms/quick-sort/: README.md  pyproject.toml  run_examples.py  run_quicksort.py  setup.py
algorithms/quick-sort/examples/: basic_usage.py
algorithms/quick-sort/src/quicksort/: __init__.py  __main__.py  quick_sort.py
algorithms/quick-sort/src/quicksort/tests/: test_quick_sort.py
concurrency/barrier-example/: README.md  barrier_example_run.py  pyproject.toml
concurrency/barrier-example/examples/: custom_example.py  modern_example.py
concurrency/barrier-example/src/barrier_example/: __init__.py  __main__.py  barrier.py  examples.py
concurrency/barrier-example/tests/: __init__.py  test_barrier.py  test_examples.py
concurrency/pipelining/: README.md  pyproject.toml  run_custom_example.py  run_data_example.py  run_pipeline.py
concurrency/pipelining/examples/: custom_pipeline_example.py  data_processing_example.py
concurrency/pipelining/src/pipeline/: __init__.py  __main__.py  pipeline_stage.py  safe_queue.py  stages.py  utils.py
concurrency/pipelining/tests/: __init__.py  conftest.py  test_pipeline_stages.py  test_safe_queue.py
concurrency/producer-consumer/: README.md  pyproject.toml  run_custom_example.py  run_producer_consumer.py  run_short_demo.py
concurrency/producer-consumer/examples/: custom_config_example.py
concurrency/producer-consumer/src/producer_consumer/: __init__.py  __main__.py  producer_consumer.py
concurrency/producer-consumer/tests/: test_producer_consumer.py
concurrency/thread-pool/: README.md  pyproject.toml  run_thread_pool.py  setup.py
concurrency/thread-pool/examples/: advanced_usage.py  basic_usage.py
concurrency/thread-pool/src/thread_pool/: __init__.py  __main__.py  thread_pool.py
concurrency/thread-pool/tests/: __init__.py  test_thread_pool.py
data-structures/binary-tree/: README.md  pyproject.toml
data-structures/binary-tree/examples/: usage_example.py
data-structures/binary-tree/src/binary_tree/: __init__.py  __main__.py  binary_tree.py
data-structures/binary-tree/tests/: test_binary_tree.py
data-structures/lru-cache/: README.md  pyproject.toml
data-structures/lru-cache/src/: __init__.py  lru_cache_simple.py
data-structures/lru-cache/tests/: __init__.py  test_lru_cache_simple.py
design-patterns/behavioral/chain-of-responsibility/: README.md  pyproject.toml
design-patterns/behavioral/chain-of-responsibility/examples/: custom_chain_example.py
design-patterns/behavioral/chain-of-responsibility/src/chain_of_responsibility/: __init__.py  __main__.py  expense_handler.py  expense_request.py  logger.py
design-patterns/behavioral/chain-of-responsibility/tests/: test_expense_handler.py
design-patterns/behavioral/command/command_pattern/: .gitignore  LICENSE  pyproject.toml
design-patterns/behavioral/command/command_pattern/tests/: __init__.py  test_document.py  test_smart_device.py
design-patterns/behavioral/fail-fast/: README.md  pyproject.toml
design-patterns/behavioral/fail-fast/examples/: banking_example.py
design-patterns/behavioral/fail-fast/src/fail_fast/: __init__.py  __main__.py  fail_fast.py
design-patterns/behavioral/fail-fast/tests/: test_fail_fast.py
design-patterns/behavioral/interpreter/: README.md  launcher.py  pyproject.toml  run_calculator.py  run_debug.py  run_interpreter.py  run_rule_engine.py
design-patterns/behavioral/interpreter/examples/: calculator_example.py  debug_example.py  rule_engine_example.py
design-patterns/behavioral/interpreter/src/interpreter_pattern/: __init__.py  __main__.py  context.py  expressions.py  logger.py
design-patterns/behavioral/strategy/: README.md  pyproject.toml  run_strategy_demo.py
design-patterns/behavioral/strategy/examples/: payment_example.py
design-patterns/behavioral/strategy/src/strategy_pattern/: __init__.py  __main__.py  strategy.py
design-patterns/behavioral/vistor/: README.md  pyproject.toml  run_example.py  run_visitor.py
design-patterns/behavioral/vistor/examples/: visitor_example.py
design-patterns/behavioral/vistor/src/visitor_pattern/: __init__.py  __main__.py  vistor.py
design-patterns/behavioral/vistor/tests/: __init__.py  test_visitor.py
design-patterns/creational/abstract-factory/: README.md  pyproject.toml  run_abstract_factory.py  run_example.py
design-patterns/creational/abstract-factory/examples/: theme_switcher.py
design-patterns/creational/abstract-factory/src/abstract_factory/: __init__.py  __main__.py  abstract_factory.py
design-patterns/structural/adapter/adapter_pattern/: README.md  pyproject.toml
design-patterns/structural/adapter/adapter_pattern/src/: __init__.py
design-patterns/structural/adapter/adapter_pattern/tests/: test_adapter.py
design-patterns/structural/proxy/proxy_pattern/: README.md  pyproject.toml
design-patterns/structural/proxy/proxy_pattern/examples/: __init__.py
design-patterns/structural/proxy/proxy_pattern/tests/: __init__.py  conftest.py  test_data_processor.py  test_logger.py  test_proxy.py
odds-and-ends/slicing/slicing/: README.md  pyproject.toml
odds-and-ends/slicing/slicing/examples/: advanced_example.py
odds-and-ends/slicing/slicing/src/: __init__.py  __main__.py
odds-and-ends/slicing/slicing/src/slicing/: __init__.py  slicing.py
odds-and-ends/slicing/slicing/tests/: test_slicing.py
programming-paradigms/negative-space/: README.md  pyproject.toml  run_advanced_example.py  run_negative_space.py
programming-paradigms/negative-space/src/negative_space/: __init__.py  __main__.py  negative_space.py
programming-paradigms/negative-space/src/negative_space/examples/: __init__.py  (+1 more)
programming-paradigms/negative-space/tests/: __init__.py  test_advanced_example.py  test_negative_space.py
utilities/timer/: README.md  pyproject.toml  run_advanced_example.py  run_example.py  run_timer.py
utilities/timer/examples/: __init__.py  __main__.py  advanced_usage.py  basic_usage.py
utilities/timer/src/timer_py/: __init__.py  __main__.py  cli.py  timer.py
utilities/timer/tests/: __init__.py  test_timer.py
(+57 files in other folders)
