[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barrier-example"
version = "0.1.0"
description = "Barrier Pattern Implementation in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "dbjwhs", email = "noreply@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PYI", "PT", "RET", "SIM", "ARG", "ERA"]
ignore = []  # ANN101 and ANN102 have been removed from recent ruff versions

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG", "PT"]
"examples/**/*.py" = ["E402", "N806"]  # Allow imports after sys.path and uppercase constants

[tool.ruff.lint.isort]
known-first-party = ["barrier_example"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "icecream"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]