[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
authors = [
    {name = "dbjwhs", email = "dbjwhs@example.com"},
]
description = "Python implementation of the Pipeline concurrency pattern"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.urls]
"Homepage" = "https://github.com/dbjwhs/python-snippets"
"Bug Tracker" = "https://github.com/dbjwhs/python-snippets/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
pipeline = "pipeline.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "EM", "ICN", "PIE", "PT", "RET", "SIM", "TCH", "ARG", "ERA", "PL", "RUF"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG"]