[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thread_pool"
version = "0.1.0"
description = "Modern Python Thread Pool Implementation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "dbjwhs", email = "example@example.com"}
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thread_pool"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"