[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lru-cache"
version = "0.1.0"
description = "An LRU (Least Recently Used) cache implementation in Python"
authors = [
    {name = "dbjwhs", email = "noreply@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I", "W", "C90", "N", "D", "UP", "S", "BLE", "A", "C4", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D", "PT009"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]