[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timer_py"
version = "0.1.0"
description = "A high-resolution timer in Python"
authors = [
    {name = "dbjwhs", email = "dbjwhs@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "icecream>=2.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
timer_py = ["py.typed"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Allow modules without stubs/type hints
[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PYI"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=timer_py --cov-report=term"

[project.scripts]
timer-py = "timer_py.cli:main"