[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fail_fast"
version = "0.1.0"
description = "Fail-Fast pattern implementation in Python"
readme = "README.md"
authors = [
    {name = "dbjwhs", email = "noreply@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "icecream",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fail_fast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-xvs"

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = false  # Disable unreachable code warning
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "N", "C4", "UP", "PL", "RUF", "SIM", "T20"]
ignore = []

[tool.ruff.isort]
known-first-party = ["fail_fast"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"