[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interpreter_pattern"
version = "0.1.0"
authors = [
    {name = "dbjwhs", email = "noreply@example.com"},
]
description = "Python implementation of the Interpreter design pattern"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.5",
    "mypy>=1.5.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["interpreter_pattern"]

[tool.pytest.ini_options]
testpaths = ["src/interpreter_pattern/tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "interpreter_pattern.tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["icecream.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PL", "RUF"]
ignore = ["ANN101"]  # Missing self type annotation

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2