[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slicing"
version = "0.1.0"
description = "Demonstrating Python object copying pitfalls"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "dbjwhs"},
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "ruff>=0.1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "icecream.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slicing.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "ANN", "COM", "C90", "T20", "YTT", "ASYNC", "D"]
ignore = ["D203", "D213", "ANN101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["slicing"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"