[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "command_pattern"
version = "0.1.0"
description = "Implementation of the Command design pattern in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "dbjwhs", email = "noreply@example.com" },
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
command-pattern = "command_pattern.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/command_pattern"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["icecream.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "U", "ANN", "C4", "SIM", "ARG", "PL"]
ignore = ["ANN401", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]