[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapter_pattern"
version = "0.1.0"
authors = [
    {name = "dbjwhs", email = "noreply@example.com"},
]
description = "Python implementation of the Adapter design pattern"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "icecream>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.1",
    "ruff>=0.1.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TID", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["adapter_pattern"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"